--- a/src/App.css
+++ b/src/App.css
@@ -175,14 +175,24 @@ color: #fff !important;
     font-size: 24px;
     margin-top: 30px;
   }
-
+ 
   .text-gradient {
     font-size: 18px !important;
+  }
+  .mob-new-text{
+    font-size: 30px !important;
+  }
+  .mob-new-clr{
+    -webkit-text-fill-color: white !important;
   }
 
   .icons {
     font-size: 24px !important;
     margin-top: 2rem;
+  }
+  .top-icons{
+    max-width: 300px;
+    flex-wrap: wrap;
   }
 
   .job-card-one {
