--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-
+.App{
+  background-color: #404040;
+}
 
 .card-cu{
   display: flex;
@@ -76,7 +78,7 @@
 }
 a{
 text-decoration: none;
-color: #fff !important;
+color: #fff;
 }
 
 .skill-icon{
@@ -93,8 +95,8 @@ color: #fff !important;
   }
 }
 .job-card-one{
-  width: 100%;
-  height: 300px;
+  width: 70%;
+  /* height: 200px; */
   border-top-left-radius: 25px;
   border-top-right-radius: 5px;
   border-bottom-left-radius: 25px;
@@ -152,6 +154,9 @@ color: #fff !important;
 .footer{
   height: 200px;
 }
+.dark-icons>a{
+  color: white !important;
+}
 
 /* General mobile styles */
 @media only screen and (max-width: 600px) {
@@ -183,7 +188,8 @@ color: #fff !important;
     font-size: 30px !important;
   }
   .mob-new-clr{
-    -webkit-text-fill-color: white !important;
+    /* -webkit-text-fill-color: white !important; */
+    margin-right: 0.5rem !important;
   }
 
   .icons {
@@ -196,7 +202,8 @@ color: #fff !important;
   }
 
   .job-card-one {
-    height: 200px;
+    /* height: 200px; */
+    width: 125%;
     border-top-left-radius: 15px;
     border-bottom-left-radius: 15px;
   }
@@ -218,6 +225,12 @@ color: #fff !important;
   .footer {
     height: 150px;
   }
+  .job-card-two {
+    width: 100% !important;
+  }
+  .dark-icons>a{
+    color: white !important;
+  }
 }
 
 /* Tablet styles */
@@ -226,6 +239,9 @@ color: #fff !important;
     flex-direction: column;
     margin: 20px;
     gap: 15px;
+  }
+  .job-card-two {
+    width: 100% !important;
   }
 
   .profile-box {
@@ -253,7 +269,8 @@ color: #fff !important;
   }
 
   .job-card-one {
-    height: 250px;
+    /* height: 250px; */
+    margin-right: 0.5rem !important;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
   }
@@ -270,4 +287,14 @@ color: #fff !important;
   .footer {
     height: 180px;
   }
+  .dark-icons>a{
+    color: white !important;
+  }
+}
+.job-card-two{
+  background-color: white;
+  color: black !important;
+  padding: 40px;
+  border-radius: 20px;
+  width: 1000px;
 }
