--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@
 .text-gradient{
   font-size: 72px;
   background: -webkit-linear-gradient(#eee, #333);
-  -webkit-background-clip: text;
+  /* -webkit-background-clip: text; */
   -webkit-text-fill-color: transparent;
 }
 .icons{
